[UC-17][QuyNN]-Manage Book